# pure-finance

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/src/: bootstrap.py
backend/src/api/: dependencies.py  main.py
backend/src/api/admin/: dependencies.py  router.py
backend/src/api/dtos/: account_response.py  analytics_by_category_response.py  analytics_summary_response.py  balance_response.py  create_account_request.py  create_transaction_request.py  google_auth_start_request.py  institution_response.py  start_connection_request.py  sync_response.py  update_account_request.py  user_response.py
backend/src/api/response_handlers/: __init__.py  app_errors.py  domain_errors.py  install.py
backend/src/api/routers/: accounts.py  analytics.py  auth.py  banking.py  categories.py  categorization_rules.py  institutions.py  transactions.py  users.py
backend/src/app/dtos/: balance_info.py  bank_account_info.py  institution_info.py
backend/src/app/exceptions/: access_token_invalid.py  account_not_found.py  base.py  cannot_delete_system_category.py  category_not_found.py  connection_session_expired.py  institution_not_found.py  oauth_state_invalid.py  rate_limit_exceeded.py  refresh_token_expired.py  refresh_token_not_found.py  (+4 more)
backend/src/db/: session.py  unit_of_work.py
backend/src/shared/: env.py  logging.py
backend/src/workers/: celery_app.py
backend/tests/fakes/: oauth_provider.py  open_banking_provider.py  rate_limiter.py  state_store.py  token_generator.py  unit_of_work.py
(+346 files in other folders)
