[project]
name = "pure-finance"
version = "0.1.0"
description = "Pure Finance — personal finance aggregator"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pyjwt>=2.8",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis>=5.0",
    "celery[redis]>=5.4",
    "alembic>=1.18.4",
    "uuid7>=0.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
strict = true
